<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="30dp"
    android:paddingHorizontal="20dp"
    android:background="@color/background"
    tools:context=".SecondActivity">

    <!-- Second Activity title -->
    <TextView
        android:id="@+id/tv_result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:text="@string/result_title"
        android:textSize="30sp"
        android:textColor="@color/primary"
        android:textAlignment="center"
        />

    <!-- Original amount layout -->
    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_amount_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_converted"
            android:textColor="@color/primary"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"

            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <!-- Original currency layout -->
    <LinearLayout
        android:id="@+id/ll_currency_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_currency_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_from"
            android:textColor="@color/primary"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"

            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <!-- Result layout -->
    <LinearLayout
        android:id="@+id/ll_currency_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_currency_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_currency_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/primary"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/tv_amount_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"

            android:textColor="@color/primary"
            android:textSize="40sp"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <!-- "Go back" button -->
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"

        android:background="@color/primary"
        android:textColor="@color/white"
        android:text="@string/btn_back"
        android:textAllCaps="true"
        android:textSize="22sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>